# DiscordWidget

./: pyproject.toml
discordwidget/: __init__.py  widget.py
tests/: test_widget_timeout.py
