[tool.poetry]
name = "discordwidget"
version = "0.3.0"
description = "A simple Python wrapper for the Discord Widget API."
authors = ["Cedric Busacker <python@busacker.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.1.6"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]

[tool.pytest.ini_options]
addopts = "--cov=discordwidget --cov-report xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
